New:  Diagrams KPI, IVLT (pre-images, invertible linear transformations)
New:  Diagram KRI (kernel and range isomorphisms)
New:  Exercise NM.T31 (with solution)
New:  Exercises LT.T30 and LT.T31
New:  Exercise LISS.T51, converse of Theorem VRRB
New:  Exercise LISS.T20, subset of linearly independent set is linearly independent
New:  Reading Questions, Section OD
New:  Diagram AIVS, Section IVLT
Edit:  Explained  min(m,n)  in Exercise PD.T15
Edit:  More on induction in Proof Technique I (Dan Messenger)
Edit:  Added multiplicities to Solution EE.C19 (Duncan Bennett)
Edit:  Subsection IVLT.SLELT, reference Definition MVP for T's definition (Kyle Whitcomb)
Edit:  Completed Solution ILT.C27 (Duncan Bennett)
Edit:  About 130 line-break adjustments, for 5 inch text width at 10pt
Edit:  Edits, Subsection CB.CELT
Edit:  Solution SLT.C29, added solution to surjective question (Dan Messenger)
Change:  Replaced Definition RR by an informal discussion
Change:  Definition TSVS renamed as Definition SSVS
Change:  Proof Technique D: discussion about definitions as nouns, adjectives
Change:  Subsection PD.DS (Direct Sums) removed, now in second volume
Change:  Subsection MM.PMM, before Theorem MMIP, conjugate fixed to reflect theorem (Dave Perkins)
Change:  Solution SLT.C25 no longer uses rank of a linear transformation (Becca Ebert)
Change:  Proof of Theorem OD rewritten
Typo:  Proof of Theorem SLSLC: Doubled text macro in source (Glenna Toomey)
Typo:  Solution S.T30: Corrected bolding on 'Proof' (Glenna Toomey)
Typo:  LaTeX/XML formatting in Solutions RREF.C11, RREF.C13, RREF.C16 (Caden Robinson)
Typo:  LaTeX/XML formatting in Solutions SSLE.M10, LISS.C21, B.C11 (Caden Robinson)
Typo:  Exercise TSS.T20, fixed link to notation (Caden Robinson)
Typo:  Spelling and grammar, Annotated Acronyms VS (Nick Butterfield)
Typo:  LaTeX/XML formatting, Proof of SLSLC, discussion after VSPCV
Typo:  Several LS(A,b) without bold  b  vector (Sophie Bartolomeo)