@@ -1375,6 +1375,11 @@ So the matrices $\alpha(AB)$ and $A(\alpha B)$ are equal, entry-by-entry, and by
 </problem>
 </exercise>
 
+<exercise type="T" number="35" rough="A*A-adjoint is Hermitian">
+<problem contributor="robertbeezer">Suppose that $A$ is an $n\times n$ matrix.  Prove that $\adjoint{A}A$ and $A\adjoint{A}$ are Hermitian matrices.
+</problem>
+</exercise>
+
 <exercise type="T" number="40" rough="Null space B a subset of null space AB">
 <problem contributor="robertbeezer">Suppose that $A$ is an $m\times n$ matrix and $B$ is an $n\times p$ matrix.  Prove that the null space of $B$ is a subset of the null space of $AB$, that is $\nsp{B}\subseteq\nsp{AB}$.  Provide an example where the opposite is false, in other words give an example where $\nsp{AB}\not\subseteq\nsp{B}$.
 </problem>
