@@ -9,6 +9,8 @@ New:  Exercise LISS.T51, converse of Theorem VRRB
 New:  Exercise LISS.T20, subset of linearly independent set is linearly independent
 New:  Reading Questions, Section OD
 New:  Diagram AIVS, Section IVLT
+New:  Discussion following Theorem OBNM
+New:  Exercises MM.T35, OD.T10, OD.T20
 Edit:  Explained  min(m,n)  in Exercise PD.T15
 Edit:  More on induction in Proof Technique I (Dan Messenger)
 Edit:  Added multiplicities to Solution EE.C19 (Duncan Bennett)
